--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;600;700&display=swap" rel="stylesheet">
 
-  <title>React App</title>
+  <title>Portifólio</title>
 </head>
 
 <body>
